exam-sim/broken-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: broken-3
  namespace: exam-ns
spec:
  containers:
  - name: broken-3
    image: nginx:1.27
