exam-sim/exam-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exam-storage
  namespace: exam-ns
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      volumeMounts:
        - name: web-storage
          mountPath: /usr/share/nginx/html
  volumes:
    - name: web-storage
      persistentVolumeClaim:
        claimName: exam-pvc
