exam-sim/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: exam
  name: exam-nginx-1
  namespace: exam-ns
spec:
  containers:
  - image: nginx:1.27
    name: exam-nginx-1
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
